--- a/railway.toml
+++ b/railway.toml
@@ -1,3 +1,6 @@
 [build]
 builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
+
+[deploy]
+startCommand = "java $JAVA_OPTS -Dserver.port=${PORT:-8080} -jar /app/app.jar"
